--- a/Readiculous.WebApp/Views/Shared/_DeleteModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_DeleteModal.cshtml
@@ -1,19 +1,22 @@
-﻿<div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
+﻿<div class="modal fade delete-modal" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title">Confirm Deletion</h5>
             </div>
             <div class="modal-body">
-                <div class="d-flex justify-content-center mb-3">
-                    <img src="/img/delete-cat.png" alt="Delete confirmation" style="max-width: 200px;">
+                <div class="delete-confirmation-image">
+                    <img src="/img/delete-cat.png" alt="Delete confirmation">
                 </div>
-                <p class="fs-5 text-center">Are you sure you want to delete <span id="userToDeleteName"></span>?</p>
+                <p class="delete-confirmation-text">
+                    Are you sure you want to delete <span class="user-name-highlight" id="userToDeleteName"></span>?
+                </p>
                 <input type="hidden" id="userToDeleteId">
             </div>
-            <div class="modal-footer justify-content-center">
+            <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+                <button type="button" class="btn btn-delete-confirm" id="confirmDeleteBtn"> Delete
+                </button>
             </div>
         </div>
     </div>
