--- a/Readiculous.WebApp/Views/Shared/_Layout.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Layout.cshtml
@@ -9,20 +9,18 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
 
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@coreui/coreui@5.0.2/dist/css/coreui.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/main.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
-    <link rel="stylesheet" href="~/css/output.css" asp-append-version="true" />
-  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
     
+    <link rel="stylesheet" href="~/css/global.css" asp-append-version="true" />
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+
     @RenderSection("Styles", required: false)
 
     <style>
@@ -106,19 +104,19 @@
     </div>
 
 
- 
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@@coreui/coreui@5.0.2/dist/js/coreui.bundle.min.js"></script>
-   
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.js"></script>
     <script src="https://kit.fontawesome.com/7a7c645416.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -133,7 +131,7 @@
             progressBar: true
         };
     </script>
-    
+
     <script>
         //For Header, Footer, and Main to take full height of the viewport
         document.querySelector('main').style.maxHeight = `calc(100vh - ${document.querySelector('header').offsetHeight}px - ${document.querySelector('footer').offsetHeight}px)`;
@@ -158,7 +156,7 @@
             e.preventDefault();
 
             const form = $(this)[0];
-            const formData = new FormData(form); 
+            const formData = new FormData(form);
 
             $.ajax({
                 url: $(this).attr('action'),
@@ -169,9 +167,9 @@
                 success: function (result) {
                         if (result.success) {
                     $('#editProfileModal').modal('hide');
-                    location.reload(); 
+                    location.reload();
                 } else {
-                    $('#editProfileModalContent').html(result); 
+                    $('#editProfileModalContent').html(result);
                 }},
                 error: function () {
                     toastr.error("An error occurred while saving the profile.");
